<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:gravity="center_horizontal"
                    android:text="@string/name"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:gravity="center_horizontal"
                    android:text="@string/dept"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:gravity="center_horizontal"
                    android:text="@string/sell"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:gravity="center_horizontal"
                    android:text="@string/saleprice"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:gravity="center_horizontal"
                    android:text="@string/salepercentage"
                    android:textColor="@android:color/black" />

            </TableRow>
        </TableLayout>

    </ScrollView>

</LinearLayout>