<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="0dp" android:contentDescription="TODO" 
        android:layout_height="match_parent"
        android:layout_weight="0.1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent" android:contentDescription="TODO" 
            android:layout_height="0dp"
            android:layout_weight="0.04" />


        <EditText
            android:id="@+id/etProductEditName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.09"
            android:background="@drawable/edittextbg"
            android:gravity="center"
            android:hint="@string/productname"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor" />

        <ImageView
            android:layout_width="match_parent" android:contentDescription="TODO" 
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etProductEditBuyPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/edittextbg"
                android:gravity="center"
                android:hint="@string/buyprice"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/etProductEditSellPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/edittextbg"
                android:gravity="center"
                android:hint="@string/sellprice"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/hintColor" />

        </LinearLayout>


        <ImageView
            android:layout_width="match_parent" android:contentDescription="TODO" 
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <EditText
            android:id="@+id/etProductEditAvialableQuantity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.09"
            android:background="@drawable/edittextbg"
            android:gravity="center"
            android:hint="@string/avialableQuantity"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor" />

        <ImageView
            android:layout_width="match_parent" android:contentDescription="TODO" 
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <EditText
            android:id="@+id/etProductEditAvialableNotification"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.09"
            android:background="@drawable/edittextbg"
            android:gravity="center"
            android:hint="@string/productavialablenotification"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor" />

        <ImageView
            android:layout_width="match_parent" android:contentDescription="TODO" 
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <EditText
            android:id="@+id/etProductEditDesc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.09"
            android:background="@drawable/edittextbg"
            android:gravity="center"
            android:hint="@string/productdesc"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor" />

        <ImageView
            android:layout_width="match_parent" android:contentDescription="TODO" 
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:background="@drawable/edittextbg"
            android:baselineAligned="false" android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/swProductEditReservation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/productreservaiton"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <Switch
                    android:id="@+id/swProductEditDeliver"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/productdeliver"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent" android:contentDescription="TODO" 
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <Button
            android:id="@+id/btnEditShopProduct"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.09"
            android:background="@drawable/btnbg"
            android:gravity="center"
            android:text="@string/editproduct"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor" />

        <ImageView
            android:layout_width="match_parent" android:contentDescription="TODO" 
            android:layout_height="0dp"
            android:layout_weight="0.01" />

    </LinearLayout>

    <ImageView
        android:layout_width="0dp" android:contentDescription="TODO" 
        android:layout_height="match_parent"
        android:layout_weight="0.1" />

</LinearLayout>